--- a/styles/sass/_recipe-card.scss
+++ b/styles/sass/_recipe-card.scss
@@ -58,12 +58,14 @@
   }
 
   &__description {
+    word-break: break-word;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
+    line-height: 16px; /* fallback */
+    max-height: calc(16px * 5); /* fallback */
     -webkit-line-clamp: 5; /* number of lines to show */
     -webkit-box-orient: vertical;
-    max-height: 100px;
   }
 
 }
