--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,7 @@ input:focus {
   flex-wrap: wrap;
   overflow: hidden;
   border-radius: 5px;
+  height: 100%;
 }
 .recipe-card__cover {
   background: #C7BEBE;
@@ -239,25 +240,23 @@ input:focus {
   -webkit-box-orient: vertical;
 }
 
-.select-box {
+.tag-box {
   position: relative;
   color: #fff;
   border-radius: 5px;
   max-width: fit-content;
 }
-.select-box__trigger {
+.tag-box__trigger {
   display: inline-block;
   position: relative;
   width: 100%;
 }
-.select-box__trigger input {
-  cursor: pointer;
+.tag-box__trigger input {
   padding: 1.5625rem 2.5rem 1.5625rem 0.9375rem;
-  min-width: 10.625rem;
   text-align: left;
   width: 100%;
 }
-.select-box__trigger::after {
+.tag-box__trigger::after {
   content: "";
   position: absolute;
   right: 0.9375rem;
@@ -270,16 +269,17 @@ input:focus {
   border-left: 0.125rem solid;
   z-index: 2;
 }
-.select-box__options {
+.tag-box__container {
   display: none;
   flex-direction: column;
   flex-wrap: wrap;
-  max-height: 20.625rem;
+  max-height: 21.25rem;
   gap: 0.625rem 0;
   padding: 0.625rem 0;
-  min-width: fit-content;
+  min-width: max-content;
+  overflow-x: auto;
 }
-.select-box__option {
+.tag-box__item {
   cursor: pointer;
   position: relative;
   padding: 0rem 0.9375rem;
@@ -288,26 +288,11 @@ input:focus {
   text-align: left;
   text-transform: capitalize;
 }
-.select-box__inputs {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1;
-  background: #D04F4F;
-  border-radius: 5px;
-  padding: 0.3125rem 0.625rem 0.625rem;
-}
 
-.--is-open.select-box .select-box__inputs {
-  display: block;
-}
-.--is-open.select-box .select-box__options {
+.--is-open.tag-box .tag-box__container {
   display: flex;
 }
-.--is-open.select-box .select-box__trigger::after {
+.--is-open.tag-box .tag-box__trigger::after {
   transform: translateY(-50%) rotate(225deg);
 }
 
@@ -455,24 +440,64 @@ header .logo svg {
   color: #C7BEBE;
 }
 
+.active-tags {
+  margin: 0.625rem 0;
+}
+.active-tags__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.625rem 0.625rem;
+}
+.active-tags__item {
+  border-radius: 5px;
+  color: #fff;
+  padding: 0.625rem;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+}
+.active-tags__item[data-type=ingredients] {
+  background: #3282F7;
+}
+.active-tags__item[data-type=appliance] {
+  background: #68D9A4;
+}
+.active-tags__item[data-type=ustensils] {
+  background: #ED6454;
+}
+.active-tags__item button {
+  margin-left: 0.625rem;
+  cursor: pointer;
+}
+.active-tags__item svg {
+  pointer-events: none;
+}
+
 .options {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   margin-top: 0.625rem;
   gap: 0.625rem 0.625rem;
 }
-.options__select select {
+.options__select {
   border: none;
   border-radius: 5px;
-  padding: 1.25rem 0.625rem;
+  padding: 0;
   color: #fff;
   font-size: 1.125rem;
+}
+@media all and (max-width: 768px) {
+  .options__select {
+    min-width: 100%;
+  }
 }
 
 .recipes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 3.125rem 3.125rem;
+  grid-auto-rows: 1fr;
+  gap: 1.875rem 1.875rem;
 }
 @media all and (max-width: 992px) {
   .recipes {
