--- a/styles/style.css
+++ b/styles/style.css
@@ -296,6 +296,68 @@ input:focus {
   transform: translateY(-50%) rotate(225deg);
 }
 
+.select-box {
+  position: relative;
+  color: #fff;
+  border-radius: 5px;
+  max-width: fit-content;
+}
+.select-box__trigger {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+.select-box__trigger input {
+  padding: 1.5625rem 2.5rem 1.5625rem 0.9375rem;
+  text-align: left;
+  width: 100%;
+}
+.select-box__trigger::after {
+  content: "";
+  position: absolute;
+  right: 0.9375rem;
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
+  transition: transform 0.3s;
+  width: 0.3125rem;
+  height: 0.3125rem;
+  border-top: 0.125rem solid;
+  border-left: 0.125rem solid;
+  z-index: 2;
+}
+.select-box__list {
+  display: none;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-height: 21.25rem;
+  gap: 0.625rem 0;
+  padding: 0.625rem 0;
+  min-width: max-content;
+  overflow-x: auto;
+}
+.select-box__item {
+  cursor: pointer;
+  position: relative;
+  padding: 0rem 0.9375rem;
+  min-width: 10.625rem;
+  font-size: 1rem;
+  text-align: left;
+  text-transform: capitalize;
+}
+.select-box__item.--is-disabled {
+  display: none;
+}
+.select-box__search-input {
+  font-size: 1rem;
+}
+
+.--is-open.select-box .select-box__list {
+  display: flex;
+}
+.--is-open.select-box .select-box__trigger::after {
+  transform: translateY(-50%) rotate(225deg);
+}
+
 /*
   Index
   ---------- ---------- ---------- ---------- ----------
@@ -498,6 +560,9 @@ header .logo svg {
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
   gap: 1.875rem 1.875rem;
+}
+.recipes .--is-disabled {
+  display: none;
 }
 @media all and (max-width: 992px) {
   .recipes {
