--- a/styles/sass/_index.scss
+++ b/styles/sass/_index.scss
@@ -140,3 +140,17 @@ header {
     grid-template-columns: 1fr;
   }
 }
+
+.filters-container {
+  position: relative;
+  width: 100%;
+  height: 70px;
+
+  @media all and (max-width: 881px) {
+    height: calc(70px * 2);
+  }
+
+  @media all and (max-width: 770px) {
+    height: calc(70px * 3);
+  }
+}
