--- a/styles/sass/_select-box.scss
+++ b/styles/sass/_select-box.scss
@@ -48,7 +48,7 @@
         cursor: pointer;
         position: relative;
         padding: to-rem(0) to-rem(15);
-        min-width: to-rem(170);
+        min-width: max-content;
         font-size: to-rem(16);
         text-align: left;
         text-transform: capitalize;
