refactor(various): change modifiers ortho to pass w3c validator

--- a/styles/sass/_select-box.scss
+++ b/styles/sass/_select-box.scss
@@ -53,7 +53,7 @@
         text-align: left;
         text-transform: capitalize;
 
-        &.--is-disabled {
+        &.is-disabled {
             display: none;
         }
     }
@@ -63,7 +63,7 @@
     }
 }
 
-.--is-open.select-box {
+.is-open.select-box {
     max-width: calc(100% - 2 * (277px + 0.625rem));
     flex: max-content;
     .select-box {
